(doc) release notes 0.42.0

--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -232,6 +232,7 @@ nav:
       - Configuration: developers/config.md
   - Release Notes:
     - About Releases: release-notes/index.md
+    - 0.42.0: release-notes/0.42.0.md
     - 0.41.0: release-notes/0.41.0.md
     - 0.40.0: release-notes/0.40.0.md
     - 0.39.1: release-notes/0.39.1.md
