(feat) integrate Bybit Perpetual to client

--- a/hummingbot/templates/conf_global_TEMPLATE.yml
+++ b/hummingbot/templates/conf_global_TEMPLATE.yml
@@ -118,6 +118,12 @@ ndax_testnet_account_name: null
 ndax_testnet_api_key: null
 ndax_testnet_secret_key: null
 
+# bybit_api_key: null
+# bybit_secret_key: null
+
+# bybit_testnet_api_key: null
+# bybit_testnet_secret_key: null
+
 bybit_perpetual_api_key: null
 bybit_perpetual_secret_key: null
 
