--- a/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
+++ b/hummingbot/templates/conf_fee_overrides_TEMPLATE.yml
@@ -3,7 +3,7 @@
 ########################################
 
 # For more detailed information: https://docs.hummingbot.io
-template_version: 7
+template_version: 8
 
 # Exchange trading fees, the values are in percentage value, e.g. 0.1 for 0.1%.
 # If the value is left blank, the default value (from corresponding market connector) will be used.
@@ -98,3 +98,6 @@ ndax_testnet_taker_fee:
 
 bybit_perpetual_maker_fee:
 bybit_perpetual_taker_fee:
+
+bybit_perpetual_testnet_maker_fee:
+bybit_perpetual_testnet_taker_fee:
