(refactor) Adds test cases for the portions of the KuCoin connector affected by the throttler integration.

--- a/setup/environment-linux.yml
+++ b/setup/environment-linux.yml
@@ -217,4 +217,5 @@ dependencies:
     - python-markdown-math==0.6
     - git+https://github.com/CoinAlpha/python-signalr-client.git
     - https://hummingbot-python.s3-us-west-2.amazonaws.com/hummingsim-20210806-cp38-cp38-linux_x86_64.whl
+    - aioresponses==0.7.2
 prefix: /home/paul/anaconda3/envs/hummingbot
