--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -186,4 +186,5 @@ dependencies:
     - python-markdown-math==0.6
     - git+https://github.com/CoinAlpha/python-signalr-client.git
     - https://hummingbot-python.s3-us-west-2.amazonaws.com/hummingsim-20210806-cp38-cp38-macosx_10_9_x86_64.whl
+    - aioresponses==0.7.2
 prefix: /usr/local/Caskroom/miniconda/base/envs/hummingbot
